<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_marginTop="@dimen/commonMarginTop"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="@dimen/commonMarginRight"
        android:layout_marginEnd="@dimen/commonMarginRight"
        android:id="@+id/disease"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/disease_text"
        android:textColor="@color/colorChanceRisk"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:layout_marginStart="@dimen/commonMarginLeft"
        android:layout_marginLeft="@dimen/commonMarginLeft"
        android:layout_marginRight="@dimen/commonMarginRight"
        android:layout_marginEnd="@dimen/commonMarginRight"
        android:id="@+id/diseaseEdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:hint="@string/disease_name_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/disease" />

    <TextView
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="@dimen/commonMarginRight"
        android:layout_marginEnd="@dimen/commonMarginRight"
        android:id="@+id/symptoms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/symptoms_text"
        android:textColor="@color/splashText"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/diseaseEdt" />

    <EditText
        android:layout_marginStart="@dimen/commonMarginLeft"
        android:layout_marginLeft="@dimen/commonMarginLeft"
        android:layout_marginRight="@dimen/commonMarginRight"
        android:layout_marginEnd="@dimen/commonMarginRight"
        android:id="@+id/symptomsEdt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/buttonHeight"
        android:textSize="20sp"
        android:hint="@string/enter_symptoms_text"
        android:inputType="textAutoCorrect|textAutoComplete"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/symptoms" />

    <Button
        android:id="@+id/addBtn"
        android:background="@color/colorChanceOk"
        style="@style/button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/buttonHeight"
        android:layout_marginStart="@dimen/commonMarginLeft"
        android:layout_marginLeft="@dimen/commonMarginLeft"
        android:layout_marginRight="@dimen/commonMarginRight"
        android:layout_marginEnd="@dimen/commonMarginRight"
        android:text="@string/add_text"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/symptomsEdt"
        app:layout_constraintRight_toRightOf="parent" />

    <android.support.v7.widget.RecyclerView
        android:layout_marginTop="@dimen/commonMarginTop"
        android:layout_marginStart="@dimen/commonMarginLeft"
        android:layout_marginLeft="@dimen/commonMarginLeft"
        android:layout_marginRight="@dimen/commonMarginRight"
        android:layout_marginEnd="@dimen/commonMarginRight"
        android:id="@+id/symptomsList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/submitBtn"
        app:layout_constraintTop_toBottomOf="@+id/addBtn">
    </android.support.v7.widget.RecyclerView>

    <Button
        android:id="@+id/submitBtn"
        style="@style/button"
        android:layout_width="0dp"
        android:layout_height="@dimen/buttonHeight"
        android:layout_margin="5dp"
        android:text="@string/submit_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/cancelBtn" />

    <Button
        android:id="@+id/cancelBtn"
        style="@style/button"
        android:layout_width="0dp"
        android:layout_height="@dimen/buttonHeight"
        android:layout_margin="5dp"
        android:background="@color/colorChanceRisk"
        android:text="@string/cancel_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/submitBtn"
        app:layout_constraintRight_toRightOf="parent" />
</android.support.constraint.ConstraintLayout>